--- a/SportiduinoManager/app/build.gradle
+++ b/SportiduinoManager/app/build.gradle
@@ -3,7 +3,7 @@ import com.github.spotbugs.snom.SpotBugsTask
 plugins {
     id "checkstyle"
     id "pmd"
-    id "com.github.spotbugs" version "6.0.22"
+    id "com.github.spotbugs" version "6.1.13"
 }
 apply plugin: 'com.android.application'
 
@@ -57,13 +57,13 @@ android {
     buildFeatures {
         buildConfig true
     }
-    lintOptions {
+    lint {
         disable 'UsingOnClickInXml'
     }
 }
 
 checkstyle {
-    toolVersion "10.23.0"
+    toolVersion "10.25.0"
     configFile file("${project.rootDir}/config/checkstyle/checkstyle.xml")
 }
 tasks.register('checkstyle', Checkstyle) {
@@ -75,7 +75,7 @@ tasks.register('checkstyle', Checkstyle) {
 check.dependsOn('checkstyle')
 
 pmd {
-    toolVersion "7.13.0"
+    toolVersion "7.14.0"
     ruleSets = []
     ruleSetFiles = files("$project.rootDir/config/pmd/rules-pmd.xml")
 }
@@ -87,7 +87,7 @@ tasks.register('pmd', Pmd) {
 check.dependsOn('pmd')
 
 spotbugs {
-    toolVersion = '4.8.6'
+    toolVersion = '4.9.3'
     excludeFilter = file("$project.rootDir/config/spotbugs/spotbugs-exclude.xml")
     reportsDir = file("$project.rootDir/app/build/reports/spotbugs/")
 }
@@ -103,13 +103,14 @@ tasks.withType(SpotBugsTask).configureEach {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.13.0-alpha13'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
+    implementation 'com.google.android.material:material:1.13.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
 
-    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0'
+    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.14.0'
 
-    final def acraVersion = '5.11.4'
+    final def acraVersion = '5.12.0'
     implementation "ch.acra:acra-core:$acraVersion"
     implementation "ch.acra:acra-http:$acraVersion"
     implementation "ch.acra:acra-toast:$acraVersion"
